update project fixes