@@ -5,7 +5,6 @@ import com.crud.tasks.domain.TaskDto;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TaskMapper {
@@ -13,14 +12,14 @@ public class TaskMapper {
 
     public Task mapToTask(final TaskDto taskDto) {
         return new Task(
-                taskDto.getTaskId(),
+                taskDto.getId(),
                 taskDto.getTitle(),
                 taskDto.getContent());
     }
 
     public TaskDto mapToTaskDto(final Task task) {
         return new TaskDto(
-                task.getTaskId(),
+                task.getId(),
                 task.getTitle(),
                 task.getContent());
     }
@@ -29,6 +28,6 @@ public class TaskMapper {
     public List<TaskDto> mapToTaskDtoList(final List<Task> taskList) {
         return taskList.stream()
                 .map(this::mapToTaskDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
